--- a/index.html
+++ b/index.html
@@ -246,7 +246,35 @@
                     </div>
                 </div>
             </section>
-            <section class="container block-section gallery">
+            <section class="container block-section main-gallery">
+                <div class="main-gallery__top">
+                    <a href="#" class="card mobile-horizontal-card">
+                        <div class="card__media">
+                            <div class="img img-6_9">
+                                <img
+                                    src="/assets/img/exampleImg.png"
+                                    alt="exampleImg"
+                                />
+                            </div>
+                        </div>
+                        <div class="card__body">
+                            <div class="meta card-tag">expert comment</div>
+                            <h3 class="card__header card-title">
+                                Al Nahda Thought Center
+                            </h3>
+                            <div class="card__summary line-clamp-3">
+                                This new website will be a portal
+                                for our users. It contains latest
+                                news about the are and much more.
+                            </div>
+                        </div>
+                    </a>
+
+                </div>
+                <div class="main-gallery__bottom">
+                    
+                </div>
+                
             </section>
             <section
                 class="container block-section carousel-section titled-section"
