sections without classes + kept structure the same + isolated each component in a way that it can work alone without the need for parent css classes

--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@
                 </div>
             </section>
 
-            <section class="block-section main-gallery">
-                <div class="container">
+            <section>
+                <div class="container block-section">
                     <div class="row mb-4">
                         <div class="col-6">
                             <a href="#" class="card">
@@ -425,8 +425,8 @@
             </section>
 
             <!-- Trending issues -->
-            <section class="block-section carousel-section titled-section">
-                <div class="container">
+            <section>
+                <div class="container block-section">
                     <h2 class="section-title">
                         <a href="#"> Trending Issues </a>
                         <a href="#" class="meta">View More</a>
@@ -736,6 +736,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- can be added as bg image with the gradient -->
                 <img
                     class="stats-field__accent-logo"
                     src="./assets/img/alNahdaLogo_accent.svg"
@@ -744,8 +745,8 @@
             </section>
 
             <!-- Latest Content -->
-            <section class="block-section carousel-section titled-section">
-                <div class="container">
+            <section>
+                <div class="container block-section">
                     <h2 class="section-title">
                         <a href="#"> Latest Content </a>
                         <a href="#" class="meta">View More</a>
@@ -976,8 +977,8 @@
             </section>
 
             <!-- Upcoming Events -->
-            <section class="block-section carousel-section titled-section">
-                <div class="container">
+            <section>
+                <div class="container block-section">
                     <h2 class="section-title">
                         <a href="#"> Upcoming Events </a>
                         <a href="#" class="meta">View More</a>
@@ -1333,9 +1334,9 @@
                 </div>
             </section>
 
-            <!-- Last Read -->
-            <section class="block-section carousel-section titled-section">
-                <div class="container">
+            <!-- (!!NOT USED RIGHT NOW!!) Last Read -->
+            <!-- <section>
+                <div class="container block-section">
                     <h2 class="section-title">
                         <a href="#"> Latest Content </a>
                         <a href="#" class="meta">View More</a>
@@ -1599,11 +1600,11 @@
                         <div class="swiper-pagination"></div>
                     </div>
                 </div>
-            </section>
+            </section> -->
 
             <!-- Support Us Banner -->
-            <section class="block-section">
-                <div class="container">
+            <section>
+                <div class="container block-section">
                     <div class="row support-us-banner">
                         <div class="col-6 support-us-banner__content">
                             <h2>Support Us</h2>
@@ -1628,8 +1629,9 @@
                 </div>
             </section>
         </main>
+
         <footer>
-            <section>
+            <div class="footer-section">
                 <div class="container">
                     <div class="row">
 
@@ -1675,8 +1677,8 @@
                 </div>
 
                 </div>
-            </section>
-            <section>
+            </div>
+            <div class="footer-section">
                 <div class="container popular-links">
                     <h3 class="card-title mb-5">Popular Links</h3>
 
@@ -1707,10 +1709,10 @@
                         </li>
                     </ul>
                 </div>
-            </section>
-            <section class="copyright">
+            </div>
+            <div class="copyright footer-section">
                 <div class="container">© Al Nahda Thought Center - 2023</div>
-            </section>
+            </div>
         </footer>
 
         <!-- carousels -->
