--- a/topics.html
+++ b/topics.html
@@ -36,7 +36,7 @@
         <header class="header">
             <div class="header__head container">
                 <div class="header__logo_search_field">
-                    <div class="img header__logo">
+                    <a href="/" class="img header__logo">
                         <img
                             src="/assets/img/alNahdaLogo.svg"
                             alt="AlNahda Logo"
@@ -51,7 +51,7 @@
                             width="225px"
                             data-background="light"
                         />
-                    </div>
+                    </a>
                     <div class="header__right-group">
                         <div class="header__search_option">
                             <span class="hide-on-tablet">Search</span>
@@ -99,7 +99,7 @@
                                         class="submenu-item"
                                         data-submenu="arab_transformations_and_al_nahda"
                                     >
-                                        <a href="#">
+                                        <a href="/topics.html">
                                             Arab Transformations and Al Nahda
                                         </a>
                                     </li>
